// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`matcher widget can reorder options: moved items 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <strong>
          Match each claim with its supporting evidence.
        </strong>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-block"
        >
          <table
            class="perseus-widget-matcher"
            style="padding-block-start: 5px; max-inline-size: 100%; min-inline-size: auto;"
          >
            <tbody>
              <tr
                style="border: 0px;"
              >
                <th
                  style="padding: 0 5px 5px 5px; border: 0px; font-weight: inherit; border-block-end: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); text-align: center;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        <strong>
                          Claims
                        </strong>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  style="padding: 0 5px 5px 5px; border: 0px; border-inline-start: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); font-weight: inherit; border-block-end: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); text-align: center;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        <strong>
                          Evidence
                        </strong>
                      </div>
                    </div>
                  </div>
                </th>
              </tr>
              <tr
                style="border: 0px;"
              >
                <td
                  style="padding: 0px; border: 0px;"
                >
                  <ul
                    class="perseus-sortable"
                    style="box-sizing: border-box; float: inline-start; padding: 0px; margin: 0px;"
                  >
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Average global temperatures will rise 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Our Sun will run out of fuel and die in around 5 billion years 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Plate tectonics will rearrange the continents: the Pacific will narrow, bringing Australia closer to the Americas, and the Atlantic will expand to form the largest of the oceans 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Our Sun will run out of hydrogen, swell into a red giant, gobble up the inner rocky planets, and then collapse and die 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            In 3 to 4 billion years, our galaxy will begin a slow collision with its closest large neighbor, Andromeda 
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </td>
                <td
                  style="padding: 0px; border: 0px; border-inline-start: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong);"
                >
                  <ul
                    class="perseus-sortable"
                    style="box-sizing: border-box; float: inline-start; padding: 0px; margin: 0px;"
                  >
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Rapid escalation of greenhouse gas emissions
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The current trajectory of the Milky Way galaxy and those in its immediate proximity
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Medium-sized stars typically exist for roughly 10 billion years
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The life cycle of medium-sized stars includes a red giant stage and ends in a whimper as a white dwarf
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The current trajectory of the Earth’s tectonic plate movement
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matcher widget should snapshot on mobile: first mobile render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <strong>
          Match each claim with its supporting evidence.
        </strong>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-block"
        >
          <table
            class="perseus-widget-matcher"
            style="padding-block-start: 5px; max-inline-size: 100%; min-inline-size: auto;"
          >
            <tbody>
              <tr
                style="border: 0px;"
              >
                <th
                  style="padding: 0 5px 5px 5px; border: 0px; font-weight: inherit; border-block-end: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); text-align: center;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        <strong>
                          Claims
                        </strong>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  style="padding: 0 5px 5px 5px; border: 0px; border-inline-start: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); font-weight: inherit; border-block-end: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); text-align: center;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        <strong>
                          Evidence
                        </strong>
                      </div>
                    </div>
                  </div>
                </th>
              </tr>
              <tr
                style="border: 0px;"
              >
                <td
                  style="padding: 0px; border: 0px;"
                >
                  <ul
                    class="perseus-sortable"
                    style="box-sizing: border-box; float: inline-start; padding: 0px; margin: 0px;"
                  >
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 8px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Our Sun will run out of fuel and die in around 5 billion years 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 8px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Plate tectonics will rearrange the continents: the Pacific will narrow, bringing Australia closer to the Americas, and the Atlantic will expand to form the largest of the oceans 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 8px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Our Sun will run out of hydrogen, swell into a red giant, gobble up the inner rocky planets, and then collapse and die 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 8px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Average global temperatures will rise 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            In 3 to 4 billion years, our galaxy will begin a slow collision with its closest large neighbor, Andromeda 
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </td>
                <td
                  style="padding: 0px; border: 0px; border-inline-start: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong);"
                >
                  <ul
                    class="perseus-sortable"
                    style="box-sizing: border-box; float: inline-start; padding: 0px; margin: 0px;"
                  >
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 8px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The current trajectory of the Milky Way galaxy and those in its immediate proximity
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 8px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Medium-sized stars typically exist for roughly 10 billion years
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 8px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The life cycle of medium-sized stars includes a red giant stage and ends in a whimper as a white dwarf
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 8px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The current trajectory of the Earth’s tectonic plate movement
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Rapid escalation of greenhouse gas emissions
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matcher widget should snapshot: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <strong>
          Match each claim with its supporting evidence.
        </strong>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-block"
        >
          <table
            class="perseus-widget-matcher"
            style="padding-block-start: 5px; max-inline-size: 100%; min-inline-size: auto;"
          >
            <tbody>
              <tr
                style="border: 0px;"
              >
                <th
                  style="padding: 0 5px 5px 5px; border: 0px; font-weight: inherit; border-block-end: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); text-align: center;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        <strong>
                          Claims
                        </strong>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  style="padding: 0 5px 5px 5px; border: 0px; border-inline-start: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); font-weight: inherit; border-block-end: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong); text-align: center;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        <strong>
                          Evidence
                        </strong>
                      </div>
                    </div>
                  </div>
                </th>
              </tr>
              <tr
                style="border: 0px;"
              >
                <td
                  style="padding: 0px; border: 0px;"
                >
                  <ul
                    class="perseus-sortable"
                    style="box-sizing: border-box; float: inline-start; padding: 0px; margin: 0px;"
                  >
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Our Sun will run out of fuel and die in around 5 billion years 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Plate tectonics will rearrange the continents: the Pacific will narrow, bringing Australia closer to the Americas, and the Atlantic will expand to form the largest of the oceans 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Our Sun will run out of hydrogen, swell into a red giant, gobble up the inner rocky planets, and then collapse and die 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Average global temperatures will rise 
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-disabled-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: default; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; background-color: inherit; position: static; margin: 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            In 3 to 4 billion years, our galaxy will begin a slow collision with its closest large neighbor, Andromeda 
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </td>
                <td
                  style="padding: 0px; border: 0px; border-inline-start: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-strong);"
                >
                  <ul
                    class="perseus-sortable"
                    style="box-sizing: border-box; float: inline-start; padding: 0px; margin: 0px;"
                  >
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The current trajectory of the Milky Way galaxy and those in its immediate proximity
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Medium-sized stars typically exist for roughly 10 billion years
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The life cycle of medium-sized stars includes a red giant stage and ends in a whimper as a white dwarf
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px 0px 5px 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The current trajectory of the Earth’s tectonic plate movement
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="perseus-sortable-draggable"
                      style="box-sizing: border-box; background: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-radius: var(--wb-border-radius-radius_040); cursor: ns-resize; min-inline-size: 25px; min-block-size: 44px; padding: 10px; list-style-type: none; user-select: none; touch-action: none; text-align: center; max-inline-size: 100%; position: static; margin: 0px;"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            Rapid escalation of greenhouse gas emissions
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
